2003-11-29  Tom Tromey  <tromey@redhat.com>

	* http_tasks.cc (check_received_bytes): Allow "-" as well.
	* depot.cc (execute_post_query): Allow "-" as well.

2003-11-16  Tom Tromey  <tromey@redhat.com>

	* missing: Removed generated file.

2003-11-27  graydon hoare  <graydon@pobox.com>

	* Makefile.am (AM_LDFLAGS): No more -static, sigh.
	* cert.cc (find_relevant_edges): Keep dynamic-programming caches.
	(calculate_renames_recursive): Likewise.
	* cert.cc, cert.hh (rename_edge): Add constructor, copy constructor.
	* commands.cc (list certs): Note rename certs are binary.

2003-11-24  graydon hoare  <graydon@pobox.com>

	* network.cc: Continue fetch, post loops even if one target has
	an exception.

2003-11-24  graydon hoare  <graydon@pobox.com>

	* database.hh, database.cc (delete_posting): Change to take queue
	sequence numbers.	
	* commands.cc (queue): Use new API.
	* network.cc (post_queued_blobs_to_network) Use new API.
	
2003-11-24  graydon hoare  <graydon@pobox.com>

	* std_hooks.lua (get_http_proxy): Return nil when no ENV var.
	* monotone.texi (get_http_proxY): Document change.

2003-11-24  graydon hoare  <graydon@pobox.com>

	* tests/t_proxy.at: Add a test for proxying with tinyproxy.
	* testsuite.at: Call it.
	* lua.cc: Fix dumb error breaking proxying.
	* network.cc: Be verbose about proxying.

2003-11-23  graydon hoare  <graydon@pobox.com>

	* http_tasks.cc (read_chunk): Tolerate 0x20* after chunk len.

2003-11-23  graydon hoare  <graydon@pobox.com>

	* network.cc: Make more informative error policy.
	* boost/socket/socketstream.hpp: Pass SocketType to streambuf template.
	* boost/socket/src/default_socket_impl.cpp: Translate EINTR.

2003-11-22  graydon hoare  <graydon@pobox.com>

	* lua.cc, lua.hh (hook_get_http_proxy): New hook.
	* std_hooks.lua (get_http_proxy): Default uses HTTP_PROXY.
	(get_connect_addr): Undefine, it's for tunnels alone now.
	* network.cc: Use new hook.
	* http_tasks.hh, http_tasks.cc: Teach about proxies (sigh).